# thymis

./: .gitignore  .pre-commit-config.yaml  CI_FIX_NOTES.md  README.md  cancel_all_actions.sh  devices-module.nix  devices.nix  docker.nix  emulate-me-a-pc-iso.sh  flake.nix  flake.systems.nix  image-formats.nix  renovate.json  set-version.sh  thymis-controller-nixos-module.nix  thymis-device-nixos-module.nix  thymis-nixos-module.nix
agent/: .gitignore  README.md  default.nix  pyproject.toml
agent/thymis_agent/: agent.py
controller/: .env.example  .env.sample  .gitignore  .pylintrc  alembic.ini  default.nix  package-lock.json  pyproject.toml
controller/alembic/: env.py  script.py.mako
controller/alembic/versions/: e2fc6c08d9f6_init_with_web_sessions.py  f118c4cff35c_init_with_web_sessions.py
controller/app/: __init__.py  api.py  dependencies.py  nix.py
controller/app/crud/: state.py
controller/app/models/: __init__.py  device.py  flake.nix.j2  minio.py  module.py  node_red.py  setting.py  state.py  tag.py  thymis.py
controller/app/models/modules/: __init__.py  kiosk.py  minio.py  node_red.py  screenshotmodules.py  thymis.py  whatever.py
controller/app/routes/: router.py
controller/tests/: conftest.py  test_agent_interface.py  test_agent_runtime.py  test_agent_tools.py  test_hostkeys.py  test_nix.py
controller/tests/crud/: test_agent_connection_extensions.py  test_connectivity_series.py  test_deployment_info_extensions.py  test_device_metric.py  test_flake_reference_parse.py  test_fleet_alerts.py  test_fleet_availability.py  test_fleet_metrics.py  test_hardware_device.py  test_switch_config.py
controller/tests/db_models/: test_hostkeys.py
controller/tests/integration/: test_x86_vm_api.py
controller/tests/routes/: conftest.py  test_agent.py  test_agent_chat_api.py  test_device_details_api.py  test_fleet_api.py  test_state_device_type_gate.py  test_switch_config_activation.py  test_switch_config_api.py
controller/tests/routes/api/: test_hostkey_interfaces.py
controller/tests/scheduler/: test_auto_update_scheduler.py
controller/tests/task/: test_switch_task_failure.py
controller/tests/utils/: test_module_split.py  test_nix.py  test_worker_access_client.py
controller/thymis_controller/: __init__.py  access_client.py  agent_runtime.py  agent_tools.py  api.py  asyncache.py  auto_update_scheduler.py  config.py  controller.py  dependencies.py  event.py  lib.py  main.py  network_relay.py  nix.py  notifications.py  notifier.py  project.py  repeat.py  repo.py  tcp_to_ws.py  utils.py
controller/thymis_controller/agent_tools/: __init__.py  arguments.py  registry.py  toolbox.py
controller/thymis_controller/alembic/: env.py
controller/thymis_controller/alembic/versions/: 06d5e3945df0_add_secrets_column_include_in_image_and_.py  0e4e49216386_add_secrets.py  142c94c6b394_add_log_table.py  179b9ee7a67d_add_agent_token_created_at.py  2024_08_18_e2fc6c08d9f6_init_with_web_sessions.py  2024_09_10_02cb9f4abdab_added_host_keys_and_images.py  2024_11_21_44aeb6abdcab_added_model_for_tasks.py  2025_01_31_bc8f00254345_add_access_client_token.py  2025_02_09_cf011834f9aa_change_session_id_to_native_uuid.py  2025_02_11_a8d5ad9db0f0_add_user_session_id_column_to_task.py  2025_02_21_11b36810c433_add_last_seen_to_deployment_info_and_.py  2025_02_21_9839fa566965_allow_hardware_device_without_.py  2025_03_03_06d5e3945df0_add_secrets_column_include_in_image_and_.py  2025_06_20_e059c84cf3fc_make_task_id_nullable.py  2026_04_01_b7e2f1a3c8d9_add_name_to_deployment_info.py  2026_06_12_c4e7a9b21f3d_add_user_info_to_sessions.py  2026_06_17_f751fa9fed90_archive_devices.py  2026_07_07_6ace24c0d4de_.py  2026_07_10_20e7fc7d369d_add_ram_bytes_and_notes_to_deployment_info.py  2026_07_18_e0c02eaf8190_add_task_submitted_time.py  40befde2965c_.py  44aeb6abdcab_added_model_for_tasks.py  6a32d509779a_add_network_interfaces_location_to_.py  84112566ca43_add_log_entry_composite_indexes.py  (+12 more)
controller/thymis_controller/crud/: __init__.py  agent_connection.py  agent_token.py  artifacts.py  check_systemd_timer.py  controller_settings.py  deployment_info.py  device_metric.py  external_repositories.py  fleet_alert.py  hardware_device.py  hostkey.py  image.py  images.py  logs.py  project.py  secrets.py  state.py  task.py  web_session.py
controller/thymis_controller/database/: base.py  connection.py  engine.py
controller/thymis_controller/db_models/: __init__.py  agent_connection.py  agent_token.py  controller_settings.py  deployment_info.py  device_metric.py  hardware_device.py  hostkey.py  image.py  logs.py  secrets.py  task.py  web_session.py
controller/thymis_controller/migration/: __init__.py  migrate.py  to_0_0_2.py  to_0_0_3.py  to_0_0_4.py  to_0_0_5.py  to_0_0_6.py  to_0_0_7.py  to_0_0_8.py  to_0_0_9.py
controller/thymis_controller/models/: __init__.py  agent.py  agent_connection.py  artifacts.py  auth.py  device.py  device_metric.py  device_type.py  external_repo.py  flake.nix.j2  fleet_alert.py  history.py  logs.py  module.py  repo.py  secrets.py  setting.py  state.py  tag.py  task.py  web_session.py
controller/thymis_controller/modules/: __init__.py  bash.py  builtin_modules.py  files.py  kiosk.py  localization.py  modules.py  networking.py  node_red.py  oci_container.py  python.py  raspberry_pi_4.py  screenshotmodules.py  security.py  settings.py  thymis.py  whatever.py
controller/thymis_controller/nix/: __init__.py  flake_reference.py  log_parse.py  templating.py
controller/thymis_controller/routers/: agent.py  api.py  api_action.py  api_agent.py  api_ai.py  api_artifacts.py  api_config.py  api_controller_settings.py  api_deployment_info.py  api_external_repositories.py  api_fleet.py  api_logging.py  api_metrics.py  api_secrets.py  api_state.py  api_statistics.py  api_task.py  api_ui_sockets.py  auth.py  frontend.py  task.py
controller/thymis_controller/routes/: router.py
controller/thymis_controller/task/: __init__.py  controller.py  executor.py  subscribe_ui.py  worker.py
controller/thymis_controller/templates_nix/: flake.nix.j2  networking.nix.j2  oci_container.nix.j2
(+508 files in other folders)
