[tool.poetry]
name = "thymis-agent"
version = "0.2.0"
description = ""
authors = ["Adrian Block <adrian.block@thymis.io>", "Eli Kogan-Wang <eli.kogan-wang@thymis.io", "Maximilian Schmöcker <maximilian.schmoecker@thymis.io>", "Florian Schönlau <florian.schoenlau@thymis.io"]
license = "AGPLv3"
readme = "README.md"
packages = [
    { include = "thymis_agent" }
]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
psutil = "^6.0.0"
pydantic = "^2.8.2"
http-network-relay = {git = "https://git@github.com/Thymis-io/http-network-relay.git"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
thymis-agent = 'thymis_agent.agent:main'
