[project]
name = "thymis-agent"
version = "0.7.2.dev"
description = "Thymis Agent for managing and monitoring devices"
authors = [
    { name = "Adrian Block", email = "adrian.block@thymis.io" },
    { name = "Eli Kogan-Wang", email = "eli.kogan-wang@thymis.io" },
    { name = "Maximilian Schmöcker", email = "maximilian.schmoecker@thymis.io" },
    { name = "Florian Schönlau", email = "florian.schoenlau@thymis.io" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.32.3",
    "psutil>=7.0.0",
    "pydantic>=2.8.2",
    "http-network-relay @ git+https://github.com/Thymis-io/http-network-relay.git@uv",
    "pyrage>=1.2.4",
    "pyrage-stubs>=1.2.4",
]

[project.scripts]
thymis-agent = "thymis_agent.agent:main"

[build-system]
requires = ["setuptools>=67.7.2", "wheel>=0.40.0"]
build-backend = "setuptools.build_meta"
