# [tool.poetry]
# name = "thymis-controller"
# version = "0.6.3.dev"
# description = ""
# authors = ["Adrian Block <adrian.block@thymis.io>", "Eli Kogan-Wang <eli.kogan-wang@thymis.io", "Maximilian Schmöcker <maximilian.schmoecker@thymis.io>", "Florian Schönlau <florian.schoenlau@thymis.io"]
# license = "AGPLv3"
# packages = [
#     { include = "thymis_controller" }
# ]

# [tool.poetry.dependencies]
# python = "^3.13"
# fastapi = "^0.115.3"
# pydantic = "^2.8.2"
# uvicorn = "^0.35.0"
# jinja2 = "^3.1.5"
# python-dotenv = "^1.0.1"
# websockets = "^15.0.0"
# packaging = "^24.0"
# httpx = "^0.28.0"
# psutil = "^7.0.0"
# pydantic-settings = "^2.6.0"
# alembic = "^1.13.2"
# sqlalchemy = "^2.0.36"
# python-multipart = "^0.0.20"
# paramiko = "^3.5.0"
# http-network-relay = {git = "https://git@github.com/Thymis-io/http-network-relay.git"}
# thymis-agent = {path = "../agent", develop = true}
# watchdog = "^6.0.0"
# pyrage = "^1.2.4"
# pyjwt = "^2.10.1"

# [tool.poetry.group.test.dependencies]
# pytest = "^8.3.2"
# pytest-cov = "^6.0.0"


# [tool.poetry.group.dev.dependencies]
# coverage = "^7.6.1"
# pylint = "^3.3.2"
# isort = "^6.0.0"

# [build-system]
# requires = ["poetry-core"]
# build-backend = "poetry.core.masonry.api"
# old with poetry

# new example signage project with uv:

# [project]
# name = "signage_server"
# version = "0.1.0"
# description = "Add your description here"
# readme = "README.md"
# requires-python = ">=3.13"
# dependencies = [
#     "fastapi[standard]>=0.115.12",
#     "psutil>=7.0.0",
#     "pydantic-settings>=2.9.1",
#     "signage-client",
# ]

# [tool.uv.sources]
# signage-client = { path = "../signage_client", editable = true }

[project]
name = "thymis-controller"
version = "0.6.4.dev"
description = "Thymis Controller for managing and monitoring devices"
authors = [
    { name = "Adrian Block", email = "adrian.block@thymis.io" },
    { name = "Eli Kogan-Wang", email = "eli.kogan-wang@thymis.io" },
    { name = "Maximilian Schmöcker", email = "maximilian.schmoecker@thymis.io" },
    { name = "Florian Schönlau", email = "florian.schoenlau@thymis.io" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.3",
    "pydantic>=2.8.2",
    "uvicorn>=0.35.0",
    "jinja2>=3.1.5",
    "python-dotenv>=1.0.1",
    "websockets>=15.0.0",
    "packaging>=24.0",
    "httpx>=0.28.0",
    "psutil>=7.0.0",
    "pydantic-settings>=2.6.0",
    "alembic>=1.13.2",
    "sqlalchemy>=2.0.36",
    "python-multipart>=0.0.20",
    "paramiko>=3.5.0",
    "http-network-relay @ git+https://github.com/Thymis-io/http-network-relay.git@uv",
    # "thymis-agent @ path=../agent,develop=true",
    "thymis-agent",
    "watchdog>=6.0.0",
    "pyrage>=1.2.4",
    "pyjwt>=2.10.1",
    "thymis-agent",
]

[project.scripts]
thymis-controller = "thymis_controller.controller:main"

[build-system]
requires = ["setuptools>=67.7.2", "wheel>=0.40.0"]
build-backend = "setuptools.build_meta"

[tool.uv.sources]
thymis-agent = { path = "../agent" }
