[project]
name = "thymis-controller"
version = "0.6.4.dev"
description = "Thymis Controller for managing and monitoring devices"
authors = [
    { name = "Adrian Block", email = "adrian.block@thymis.io" },
    { name = "Eli Kogan-Wang", email = "eli.kogan-wang@thymis.io" },
    { name = "Maximilian Schmöcker", email = "maximilian.schmoecker@thymis.io" },
    { name = "Florian Schönlau", email = "florian.schoenlau@thymis.io" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.3",
    "pydantic>=2.8.2",
    "uvicorn>=0.35.0",
    "jinja2>=3.1.5",
    "python-dotenv>=1.0.1",
    "websockets>=15.0.0",
    "packaging>=24.0",
    "httpx>=0.28.0",
    "psutil>=7.0.0",
    "pydantic-settings>=2.6.0",
    "alembic>=1.13.2",
    "sqlalchemy>=2.0.36",
    "python-multipart>=0.0.20",
    "paramiko>=3.5.0",
    "http-network-relay @ git+https://github.com/Thymis-io/http-network-relay.git@uv",
    # "thymis-agent @ path=../agent,develop=true",
    "thymis-agent",
    "watchdog>=6.0.0",
    "pyrage>=1.2.4",
    "pyjwt>=2.10.1",
    "thymis-agent",
    "cachetools>=6.2.0",
]

[project.scripts]
thymis-controller = "thymis_controller.controller:main"

[build-system]
requires = ["setuptools>=67.7.2", "wheel>=0.40.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["**/*.j2", "**/*.json", "**/*.svg", "**/*.png"]

[tool.uv.sources]
thymis-agent = { path = "../agent" }
